--- a/src/_includes/layouts/builderPartnership.njk
+++ b/src/_includes/layouts/builderPartnership.njk
@@ -25,7 +25,7 @@
                         </div>
                     </div>
                     <!-- CTA Buttons -->
-                    <ul class="site-hero-content-buttons">
+                    <ul class="site-hero-content-buttons mb-5">
                         <li>
                             <a href="#apply-form" class="btn btn-secondary">
                                 {{ builderPartnership.hero.cta.primary.text }}
