--- a/src/_includes/layouts/builderPartnership.njk
+++ b/src/_includes/layouts/builderPartnership.njk
@@ -1,7 +1,7 @@
 {% extends "base.njk" %}
 {% block content %}
     <!-- Hero Section -->
-    <section class="site-hero">
+    <section class="site-hero" style="padding-top:122px;">
         <div class="container">
             <div class="row align-items-center">
                 <div class="col-lg-6">
