--- a/src/_includes/base.njk
+++ b/src/_includes/base.njk
@@ -32,8 +32,25 @@
         <link rel="shortcut icon" href="{{ '/assets/images/favicon.png' | url }}" type="image/x-icon"/>
         <link rel="icon" href="{{ '/assets/images/favicon.png' | url }}" type="image/x-icon"/>
         {% if excludeTracking != true %}
-            <!-- Facebook Pixel -->
-            <!-- Google Analytics --><script async src="https://www.googletagmanager.com/gtag/js?id=G-3Y2LY6Q5FT"> </script>
+            <!-- Meta Pixel Code -->
+            <script>
+                !function(f,b,e,v,n,t,s)
+                {if(f.fbq)return;n=f.fbq=function(){n.callMethod?
+                n.callMethod.apply(n,arguments):n.queue.push(arguments)};
+                if(!f._fbq)f._fbq=n;n.push=n;n.loaded=!0;n.version='2.0';
+                n.queue=[];t=b.createElement(e);t.async=!0;
+                t.src=v;s=b.getElementsByTagName(e)[0];
+                s.parentNode.insertBefore(t,s)}(window, document,'script',
+                'https://connect.facebook.net/en_US/fbevents.js');
+                fbq('init', '1128271212568772');
+                fbq('track', 'PageView');
+            </script>
+            <noscript><img height="1" width="1" style="display:none"
+            src="https://www.facebook.com/tr?id=1128271212568772&ev=PageView&noscript=1"
+            /></noscript>
+            <!-- End Meta Pixel Code -->
+            <!-- Google Analytics -->
+            <script async src="https://www.googletagmanager.com/gtag/js?id=G-3Y2LY6Q5FT"> </script>
             <script>
                 window.dataLayer = window.dataLayer || [];
                 function gtag() {
