--- a/src/_includes/layouts/roiCalculatorLanding.njk
+++ b/src/_includes/layouts/roiCalculatorLanding.njk
@@ -127,8 +127,8 @@
                                 <div class="site-project-item h-100 p-4 text-center">
                                     <div
                                         class="mybg-secondary rounded-lg p-3 mx-auto mb-4"
-                                        style="width: 80px; height: 80px; display: flex; align-items: center; justify-content: center; font-size: 2.2rem;">
-                                        {{ item.icon }}
+                                        style="width: 80px; height: 80px; display: flex; align-items: center; justify-content: center;">
+                                        <i class="{{ item.icon }} txt-primary" style="font-size: 2.2rem;"></i>
                                     </div>
                                     <h3 class="txt-primary mb-3">{{ item.title }}</h3>
                                     <p class="txt-medium">{{ item.description }}</p>
