--- a/src/_includes/base.njk
+++ b/src/_includes/base.njk
@@ -98,7 +98,7 @@
                                     </li>
                                 {% endfor %}
                                 <li class="d-none d-lg-block nav-item">
-                                    <a class="nav-link btn btn-sm btn-primary btn-sm-rounded text-light" href="{{ ('/' + nav.navBtnLink) | url }}">
+                                    <a class="nav-link btn btn-sm btn-primary btn-sm-rounded text-light" href="{{ nav.navBtnLink | url }}">
                                         <span class="btn-area">
                                             <span data-text="{{ nav.navBtnText }}">
                                                 {{ nav.navBtnText }}
